--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <!-- Slider main container -->
         <div class="swiper">
             <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
             <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide"><img src="Img/ApacheKafka.svg" alt="Livro sobre apache kafka da alura books"></div>
@@ -64,9 +66,6 @@
             <div class="swiper-slide"><img src="Img/Tuning.svg" alt="Livro sobre Tuning SQL"></div>
             <div class="swiper-slide"><img src="Img/UX.svg" alt="Livro sobre UX"></div>
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-        
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
@@ -76,5 +75,11 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+        spaceBetween: 10,
+        slidesPerView: 3,
+    });
+    </script>
 </body>
 </html>
